# OpenGL-Fun

./: .gitignore  README.md
root/: CMakeLists.txt  buildshaders.bat  cmake_config.hpp.in  createvsproject.bat
root/assets/shaders/: basic.shader  debug.shader  default.shader  default_depth.shader  dither.glsl  helpers.glsl  noises.glsl  terrain.shader  terrain_depth.shader  unlit.shader
root/code/application/: CMakeLists.txt
root/code/application/include/: application.h  asset.h  assetloader.h  camera.h  graphics.h  scene.h  shadersystem.h  simulation.h  types.h  uicontroller.h
root/code/application/src/: application.cpp  asset.cpp  assetloader.cpp  graphics.cpp  main.cpp  scene.cpp  shadersystem.cpp  simulation.cpp  uicontroller.cpp
